--- a/1-embeddings.ipynb
+++ b/1-embeddings.ipynb
@@ -94,11 +94,220 @@
    "execution_count": null,
    "id": "fab41fdb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doc with ID '40' has been processed before.\n",
+      "Doc with ID '41' has been processed before.\n",
+      "Doc with ID '42' has been processed before.\n",
+      "Doc with ID '43' has been processed before.\n",
+      "Doc with ID '44' has been processed before.\n",
+      "Doc with ID '45' has been processed before.\n",
+      "Doc with ID '46' has been processed before.\n",
+      "Doc with ID '47' has been processed before.\n",
+      "Doc with ID '48' has been processed before.\n",
+      "Doc with ID '49' has been processed before.\n",
+      "Doc with ID '50' has been processed before.\n",
+      "Doc with ID '51' has been processed before.\n",
+      "Doc with ID '52' has been processed before.\n",
+      "Doc with ID '53' has been processed before.\n",
+      "Doc with ID '54' has been processed before.\n",
+      "Doc with ID '55' has been processed before.\n",
+      "Doc with ID '56' has been processed before.\n",
+      "Doc with ID '57' has been processed before.\n",
+      "Doc with ID '58' has been processed before.\n",
+      "Doc with ID '59' has been processed before.\n",
+      "Doc with ID '60' has been processed before.\n",
+      "Doc with ID '61' has been processed before.\n",
+      "Doc with ID '62' has been processed before.\n",
+      "Doc with ID '63' has been processed before.\n",
+      "Doc with ID '64' has been processed before.\n",
+      "Doc with ID '65' has been processed before.\n",
+      "Doc with ID '66' has been processed before.\n",
+      "Doc with ID '67' has been processed before.\n",
+      "Doc with ID '68' has been processed before.\n",
+      "Doc with ID '69' has been processed before.\n",
+      "Doc with ID '70' has been processed before.\n",
+      "Doc with ID '71' has been processed before.\n",
+      "Doc with ID '72' has been processed before.\n",
+      "Doc with ID '73' has been processed before.\n",
+      "Doc with ID '74' has been processed before.\n",
+      "Doc with ID '75' has been processed before.\n",
+      "Doc with ID '76' has been processed before.\n",
+      "Doc with ID '77' has been processed before.\n",
+      "Doc with ID '78' has been processed before.\n",
+      "Doc with ID '79' has been processed before.\n",
+      "Doc with ID '110' has been processed before.\n",
+      "Doc with ID '111' has been processed before.\n",
+      "Doc with ID '112' has been processed before.\n",
+      "Doc with ID '113' has been processed before.\n",
+      "Doc with ID '114' has been processed before.\n",
+      "Doc with ID '115' has been processed before.\n",
+      "Doc with ID '116' has been processed before.\n",
+      "Doc with ID '117' has been processed before.\n",
+      "Doc with ID '118' has been processed before.\n",
+      "Doc with ID '119' has been processed before.\n",
+      "Doc with ID '120' has been processed before.\n",
+      "Doc with ID '121' has been processed before.\n",
+      "Doc with ID '122' has been processed before.\n",
+      "Doc with ID '123' has been processed before.\n",
+      "Doc with ID '124' has been processed before.\n",
+      "Doc with ID '125' has been processed before.\n",
+      "Doc with ID '126' has been processed before.\n",
+      "Doc with ID '127' has been processed before.\n",
+      "Doc with ID '128' has been processed before.\n",
+      "Doc with ID '129' has been processed before.\n",
+      "Doc with ID '130' has been processed before.\n",
+      "Doc with ID '131' has been processed before.\n",
+      "Doc with ID '132' has been processed before.\n",
+      "Doc with ID '133' has been processed before.\n",
+      "Doc with ID '134' has been processed before.\n",
+      "Doc with ID '135' has been processed before.\n",
+      "Doc with ID '136' has been processed before.\n",
+      "Doc with ID '137' has been processed before.\n",
+      "Doc with ID '138' has been processed before.\n",
+      "Doc with ID '139' has been processed before.\n",
+      "Doc with ID '178' has been processed before.\n",
+      "Doc with ID '179' has been processed before.\n",
+      "Doc with ID '180' has been processed before.\n",
+      "Doc with ID '181' has been processed before.\n",
+      "Doc with ID '182' has been processed before.\n",
+      "Doc with ID '183' has been processed before.\n",
+      "Doc with ID '184' has been processed before.\n",
+      "Doc with ID '185' has been processed before.\n",
+      "Doc with ID '186' has been processed before.\n",
+      "Doc with ID '187' has been processed before.\n",
+      "Doc with ID '188' has been processed before.\n",
+      "Doc with ID '189' has been processed before.\n",
+      "Doc with ID '190' has been processed before.\n",
+      "Doc with ID '191' has been processed before.\n",
+      "Doc with ID '192' has been processed before.\n",
+      "Doc with ID '193' has been processed before.\n",
+      "Doc with ID '194' has been processed before.\n",
+      "Doc with ID '195' has been processed before.\n",
+      "Doc with ID '196' has been processed before.\n",
+      "Doc with ID '197' has been processed before.\n",
+      "Doc with ID '198' has been processed before.\n",
+      "Doc with ID '199' has been processed before.\n",
+      "Doc with ID '200' has been processed before.\n",
+      "Doc with ID '201' has been processed before.\n",
+      "Doc with ID '202' has been processed before.\n",
+      "Doc with ID '203' has been processed before.\n",
+      "Doc with ID '204' has been processed before.\n",
+      "Doc with ID '205' has been processed before.\n",
+      "Doc with ID '206' has been processed before.\n",
+      "Doc with ID '207' has been processed before.\n",
+      "Doc with ID '208' has been processed before.\n",
+      "Doc with ID '209' has been processed before.\n",
+      "Doc with ID '210' has been processed before.\n",
+      "Doc with ID '211' has been processed before.\n",
+      "Doc with ID '212' has been processed before.\n",
+      "Doc with ID '213' has been processed before.\n",
+      "Doc with ID '214' has been processed before.\n",
+      "Doc with ID '215' has been processed before.\n",
+      "Doc with ID '100134' has been processed before.\n",
+      "Doc with ID '100136' has been processed before.\n",
+      "Doc with ID '100139' has been processed before.\n",
+      "Doc with ID '100046' has been processed before.\n",
+      "Doc with ID '100047' has been processed before.\n",
+      "Doc with ID '100179' has been processed before.\n",
+      "Doc with ID '100052' has been processed before.\n",
+      "Doc with ID '100181' has been processed before.\n",
+      "Doc with ID '100059' has been processed before.\n",
+      "Doc with ID '100066' has been processed before.\n",
+      "Doc with ID '100198' has been processed before.\n",
+      "Doc with ID '100071' has been processed before.\n",
+      "Doc with ID '100072' has been processed before.\n",
+      "Doc with ID '100199' has been processed before.\n",
+      "Doc with ID '100077' has been processed before.\n",
+      "Doc with ID '100078' has been processed before.\n",
+      "Doc with ID '100079' has been processed before.\n",
+      "Doc with ID '100208' has been processed before.\n",
+      "Doc with ID '100209' has been processed before.\n",
+      "Doc with ID '100207' has been processed before.\n",
+      "Doc with ID '100205' has been processed before.\n",
+      "Doc with ID '100212' has been processed before.\n",
+      "Doc with ID '100211' has been processed before.\n",
+      "Doc with ID '100112' has been processed before.\n",
+      "Doc with ID '100114' has been processed before.\n",
+      "Doc with ID '100115' has been processed before.\n",
+      "Doc with ID '100119' has been processed before.\n",
+      "Doc with ID '100123' has been processed before.\n",
+      "Doc with ID '100125' has been processed before.\n",
+      "Doc with ID '100127' has been processed before.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 367 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 368 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 399 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 456 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 435 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 373 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 430 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 443 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 460 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 418 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 472 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 390 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 325 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 367 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 471 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 405 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 391 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 434 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 453 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 370 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 430 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 466 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 512 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 683 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 366 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 386 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 406 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 455 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 478 total tokens.\n",
+      "DEBUG: Getting embedding from OpenAI\n",
+      "DEBUG: Got embedding. Usage: 490 total tokens.\n",
+      "Doc with ID '300001' has been processed before.\n",
+      "Doc with ID '300002' has been processed before.\n",
+      "Doc with ID '300003' has been processed before.\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
-    "_ = documents.apply(get_and_save_embeddings, axis=1)\n",
+    "# _ = documents.apply(get_and_save_embeddings, axis=1)\n",
     "\n",
-    "print(\"Done\")"
+    "# print(\"Done\")"
    ]
   },
   {
